# so-tp2

./: .gitignore  CMakeLists.txt  Makefile  README.md  block.cpp  block.h  blockchain.cpp  exp.ipynb  node.cpp  node.h  picosha2.h
exp/: Untitled.ipynb  blockchain_exp_100_12.csv  blockchain_exp_100_13.csv  blockchain_exp_100_14.csv  blockchain_exp_100_15.csv  blockchain_exp_100_16.csv  blockchain_exp_100_17.csv  blockchain_exp_100_18.csv  blockchain_exp_100_19.csv  blockchain_exp_15_12.csv  blockchain_exp_15_13.csv  blockchain_exp_15_14.csv  blockchain_exp_15_15.csv  blockchain_exp_15_16.csv  blockchain_exp_15_17.csv  blockchain_exp_15_18.csv  blockchain_exp_15_19.csv  blockchain_exp_1_12.csv  blockchain_exp_1_13.csv  blockchain_exp_1_14.csv  blockchain_exp_1_15.csv  blockchain_exp_1_16.csv  blockchain_exp_1_17.csv  blockchain_exp_1_18.csv  blockchain_exp_1_19.csv  blockchain_exp_2_12.csv  blockchain_exp_2_13.csv  blockchain_exp_2_14.csv  blockchain_exp_2_15.csv  blockchain_exp_2_16.csv  blockchain_exp_2_17.csv  blockchain_exp_2_18.csv  blockchain_exp_2_19.csv  blockchain_exp_3_12.csv  blockchain_exp_3_13.csv  blockchain_exp_3_14.csv  blockchain_exp_3_15.csv  blockchain_exp_3_16.csv  blockchain_exp_3_17.csv  blockchain_exp_3_18.csv  (+42 more)
exp/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
